; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_HasNext.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_HasNext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.randomizer = type { i64, %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @randomizer_HasNext(%struct.randomizer* %0) #0 {
  %2 = alloca %struct.randomizer*, align 8
  store %struct.randomizer* %0, %struct.randomizer** %2, align 8
  %3 = load %struct.randomizer*, %struct.randomizer** %2, align 8
  %4 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %16, label %7

7:                                                ; preds = %1
  %8 = load %struct.randomizer*, %struct.randomizer** %2, align 8
  %9 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.randomizer*, %struct.randomizer** %2, align 8
  %12 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp slt i64 %10, %14
  br label %16

16:                                               ; preds = %7, %1
  %17 = phi i1 [ true, %1 ], [ %15, %7 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
